# tmx

./: CLAUDE.md  Cargo.toml  README.md
src/: app.rs  event.rs  main.rs  tmux.rs
src/model/: mod.rs  pane.rs  session.rs  window.rs
src/ui/: help.rs  layout_minimap.rs  mod.rs  panes.rs  preview.rs  prompt.rs  sessions.rs  windows.rs
