[package]
name = "tmmx"
version = "0.1.0"
edition = "2024"
description = "A terminal UI for managing tmux sessions, windows, and panes"
license = "MIT"
repository = "https://github.com/am2rican5/tmmx"

[dependencies]
ratatui = "0.30"
crossterm = "0.29"
color-eyre = "0.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
dirs = "6"
